--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-sass": "4.14",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
