--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "react-test-renderer": "^17.0.2",
