--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "bootstrap": "^5.1.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
-    "node-sass": "4.14",
+    "node-sass": "4.14.1",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
@@ -27,7 +27,7 @@
     "react-scripts": "4.0.3",
     "react-test-renderer": "^17.0.2",
     "redux": "^4.1.2",
-    "sass-loader": "11.1.0",
+    "sass-loader": "^12.3.0",
     "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
   },
