--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "4.14.1",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
+    "react-animated-burgers": "^1.2.8",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -28,6 +29,7 @@
     "react-test-renderer": "^17.0.2",
     "redux": "^4.1.2",
     "sass-loader": "^12.3.0",
+    "styled-components": "^5.3.3",
     "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
   },
