--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/node": "^16.11.7",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "node-sass": "4.14.1",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
+    "react-animated-burgers": "^1.2.8",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -28,6 +30,7 @@
     "react-test-renderer": "^17.0.2",
     "redux": "^4.1.2",
     "sass-loader": "^12.3.0",
+    "styled-components": "^5.3.3",
     "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
   },
