--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "bootstrap": "^5.1.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
+    "firebase": "^9.6.6",
+    "firebase-tools": "^10.2.0",
     "gsap": "^3.9.1",
     "node-sass": "4.14.1",
     "npm-run-all": "^4.1.5",
