--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "pomzyw2021",
-  "version": "0.1.0",
+  "name": "PomocŻywnościowa",
+  "version": "1.0.0",
   "private": true,
+  "engines": {
+    "npm": ">=6.14.15",
+    "node": ">=14.18.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
