--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PomocŻywnościowa",
+  "name": "pomoczywnosciowa",
   "version": "1.0.0",
   "private": true,
   "engines": {
@@ -25,6 +25,7 @@
     "react-animated-burgers": "^1.2.8",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-paginate": "^8.1.3",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
