--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-animated-burgers": "^1.2.8",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-ga4": "^1.4.1",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
